@startuml

interface Price {
    double getCharge(int)
    int frequentRenterPoints(int)
}

class RegularPrice {
    double getCharge(int)
    int frequentRenterPoints(int)
}

class ChildrensPrice {
    double getCharge(int)
    int frequentRenterPoints(int)
}

class NewReleasePrice {
    double getCharge(int)
    int frequentRenterPoints(int)
}

Price <|-- RegularPrice
Price <|-- ChildrensPrice
Price <|-- NewReleasePrice

@enduml